--- a/omc/webapp/templates/contests/admin/admin.html
+++ b/omc/webapp/templates/contests/admin/admin.html
@@ -37,6 +37,7 @@ var contestantsUrl = '{% url 'contests:contestants' %}';
 var matchDetailUrl = '{% url 'contests:match_detail' %}';
 var deleteUrl = '{% url 'contests:delete' %}';
 var managementUrl = '{% url 'webapp:contests' %}';
+var matchDetailUrl ='{% url 'webapp:match_detail' %}';
 </script>
 
 <script type="text/javascript" src="{% static 'scripts/utilities/pagination.js' %}"></script>
