--- a/omc/webapp/templates/contests/admin/modal_match_detail.html
+++ b/omc/webapp/templates/contests/admin/modal_match_detail.html
@@ -17,12 +17,16 @@
                 </ul>
                 {% endif %}
                 <div class="tab-content" style="height: 260px;">
-                    <div {% if contest.use_mc_test and contest.use_writing_test %}class="tab-pane fade in active" {% endif %} id="match-mc-questions">
+                    {% if contest.use_mc_test %}
+                    <div {% if contest.use_writing_test %}class="tab-pane fade in active"{% endif %} id="match-mc-questions">
                         <div class="panel-group scroller"></div>
                     </div>
-                    <div {% if contest.use_mc_test and contest.use_writing_test %}class="tab-pane fade" {% endif %} id="match-writing-questions">
+                    {% endif %}
+                    {% if contest.use_writing_test %}
+                    <div {% if contest.use_mc_test %}class="tab-pane fade"{% endif %} id="match-writing-questions">
                         <div class="panel-group scroller"></div>
                     </div>
+                    {% endif %}
                 </div>
             </div>
             <div class="modal-footer">
