--- a/omc/webapp/templates/contests/admin/modal_match_detail.html
+++ b/omc/webapp/templates/contests/admin/modal_match_detail.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Chi tiết lượt thi</h4>
             </div>
             <div class="modal-body">
